, c.id zu search partial hinzugefügt

--- a/app/views/products/_search.html.erb
+++ b/app/views/products/_search.html.erb
@@ -11,21 +11,21 @@
   <div class="col-md-2">
 		<div class="form-group has-success">
 		  <label class="control-label" for="inputSuccess"><%= label_tag :target_group %></label>
-			<%= select_tag :target_group, options_for_select(Product.all.group("target_group").collect {|c| [ c.target_group] }), :multiple => true,class: "form-control" %>
+			<%= select_tag :target_group, options_for_select(Product.all.group("target_group").collect {|c| [ c.target_group], c.id  }), :multiple => true,class: "form-control" %>
 		</div>
 	</div>
 
   <div class="col-md-2">
 		<div class="form-group has-success">
 		  <label class="control-label" for="inputSuccess"><%= label_tag :size %></label>
-			<%= select_tag :size, options_for_select(Product.all.group("size").collect {|c| [ c.size] }), :multiple => true, class: "form-control" %>
+			<%= select_tag :size, options_for_select(Product.all.group("size").collect {|c| [ c.size], c.id  }), :multiple => true, class: "form-control" %>
 		</div>
 	</div>
 
 	<div class="col-md-2">
 		<div class="form-group has-success">
 		  <label class="control-label" for="inputSuccess"><%= label_tag :color %></label>
-			<%= select_tag :color, options_for_select(Product.all.group("color").collect {|c| [ c.color] }), :multiple => true, class: "form-control" %>
+			<%= select_tag :color, options_for_select(Product.all.group("color").collect {|c| [ c.color], c.id }), :multiple => true, class: "form-control" %>
 		</div>
 	</div>
 
