--- a/app/views/products/_table.html.erb
+++ b/app/views/products/_table.html.erb
@@ -22,7 +22,11 @@
               </th>
               
               <th>
-                  Target Group
+                  <% if params[:sorting] == "target_group" %>
+                    Target Group
+                  <% else %>
+                    <%= link_to "Target Group", products_path(sorting: "target_group") %>
+                  <% end %>
               </th>
 
               <th>
